--- a/GB_ChallengeThree_Tests/GB_ChallengeThree_Tests.csproj
+++ b/GB_ChallengeThree_Tests/GB_ChallengeThree_Tests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GB_ChallengeThree_Repo\GB_ChallengeThree_Repo.csproj">
+      <Project>{357FC1FB-7272-4EF4-A8EF-FBE71E84F577}</Project>
+      <Name>GB_ChallengeThree_Repo</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
